<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="12dp">

    <include
        android:id="@+id/layoutTitle"
        layout="@layout/back_title_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <com.weberhsu.presentation.widget.KitInputText
                android:id="@+id/inputCardName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:inputTitle="@string/card_name_required"
                app:inputHint="Wei's Card"
                app:inputErrorTip="@string/field_required"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.weberhsu.presentation.widget.KitInputText
                android:id="@+id/inputNameOnCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:inputTitle="@string/name_on_card_required"
                app:inputHint="Wei Chen"
                app:inputErrorTip="@string/field_required"
                app:layout_constraintTop_toBottomOf="@+id/inputCardName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.weberhsu.presentation.ui.cards.widget.CardNumberInput
                android:id="@+id/inputCardNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/inputNameOnCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txtExpiryDateTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exp_date_required"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:includeFontPadding="false"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:paddingBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/inputCardNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                />

            <com.weberhsu.presentation.ui.cards.widget.CardExpiryDatePickerTextView
                android:id="@+id/txtExpiryDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_kit_input_text"
                android:text="MM/YY"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/placeholder"
                android:layout_marginEnd="6dp"
                app:layout_constraintTop_toBottomOf="@+id/txtExpiryDateTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"/>

            <TextView
                android:id="@+id/tvExpiryDateErrorTip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="16dp"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                android:text="@string/field_required"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textDirection="locale"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/txtExpiryDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline" />

            <com.weberhsu.presentation.ui.cards.widget.CardCvvInput
                android:id="@+id/inputCvv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="6dp"
                android:imeOptions="flagNoExtractUi|actionDone"
                app:layout_constraintTop_toBottomOf="@+id/inputCardNumber"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_action"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>