<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    android:paddingVertical="16dp">

    <include
        android:id="@+id/layoutTitle"
        layout="@layout/back_title_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_card_detail_section"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle">

        <ImageView
            android:id="@+id/imgActive"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_active"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:text="@string/card_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgActive"
            app:layout_constraintStart_toEndOf="@+id/imgActive"
            app:layout_constraintTop_toTopOf="@+id/imgActive" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnDelete"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_delete"
            android:layout_marginEnd="4dp"
            android:scaleType="fitXY"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@+id/imgLogo"
            app:layout_constraintBottom_toBottomOf="@+id/imgLogo"
            app:layout_constraintEnd_toStartOf="@+id/imgLogo"/>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="78dp"
            android:layout_height="14dp"
            android:contentDescription="@null"
            android:src="@mipmap/logo_white"
            app:layout_constraintBottom_toBottomOf="@+id/imgActive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgActive" />

        <TextView
            android:id="@+id/txtCardNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:includeFontPadding="false"
            android:text="@string/card_number"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgActive" />

        <!-- Card Number -->
        <TextView
            android:id="@+id/txtCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:clickable="true"
            android:focusable="true"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingHorizontal="0dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCardNumberTitle"
            tools:text="0000 0000 0000 1234" />

        <ImageView
            android:id="@+id/imgCardNumberCopy"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="@+id/txtCardNumber"
            app:layout_constraintStart_toEndOf="@+id/txtCardNumber"
            app:layout_constraintTop_toTopOf="@+id/txtCardNumber" />

        <!-- Exp Date -->
        <TextView
            android:id="@+id/txtExpDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:includeFontPadding="false"
            android:text="@string/card_exp_date"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCardNumber" />

        <com.weberhsu.presentation.ui.cards.widget.CardExpiryDatePickerTextView
            android:id="@+id/txtExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:paddingHorizontal="0dp"
            android:layout_marginTop="7dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtExpDateTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtExpDateTitle"
            tools:text="03/25 "/>

        <ImageView
            android:id="@+id/imgExpDateCopy"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="6dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="@+id/txtExpiryDate"
            app:layout_constraintStart_toEndOf="@+id/txtExpiryDate"
            app:layout_constraintTop_toTopOf="@+id/txtExpiryDate" />

        <!-- CVV -->
        <TextView
            android:id="@+id/txtCvvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="21dp"
            android:includeFontPadding="false"
            android:text="@string/card_cvv"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/txtExpDateTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtCardNumber" />

        <TextView
            android:id="@+id/txtCvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:paddingHorizontal="0dp"
            android:layout_marginTop="7dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="0dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCvvTitle"
            app:layout_constraintStart_toStartOf="@+id/txtCvvTitle"
            tools:text="0000 "/>

        <ImageView
            android:id="@+id/imgCvvCopy"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="6dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="@+id/txtCvv"
            app:layout_constraintStart_toEndOf="@+id/txtCvv"
            app:layout_constraintTop_toTopOf="@+id/txtCvv" />

        <ImageView
            android:id="@+id/imgCardBrand"
            android:layout_width="50dp"
            android:layout_height="16dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_visa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCvv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:background="@drawable/bg_name_on_card"
        app:layout_constraintTop_toBottomOf="@+id/layoutCardDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtNameOnCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/name_on_card"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtNameOnCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNameOnCardTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Wei Chen"/>

        <ImageView
            android:id="@+id/imgNameOnCardCopy"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_copy_gray"
            android:layout_marginStart="6dp"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="@+id/txtNameOnCard"
            app:layout_constraintBottom_toBottomOf="@+id/txtNameOnCard"
            app:layout_constraintStart_toEndOf="@+id/txtNameOnCard"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>